[metadata]
name = thermodynamics_tools
author = Henrique Hafner Ferreira
author_email = henriquehafner@poli.ufrj.br henriquehafner7@gmail.com
description = thermoscience tools
version = 0.1
url = https://github.com/HenriqueHafner/thermodynamics_tools
keywords =
  thermoscience
classifiers =
  Development Status :: Alpha
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
license_files =
  LICENSE.txt

[options]
python_requires = >= 3.5
packages = find:
zip_safe = False